--- a/tasks-app/package.json
+++ b/tasks-app/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.4.1",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "expo": "~53.0.17",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-paper": "^5.14.5",
-    "@react-native-community/datetimepicker": "8.4.1"
+    "react-native-paper": "^5.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
