--- a/tasks-app/package.json
+++ b/tasks-app/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "8.4.1",
     "axios": "^1.10.0",
-    "dotenv": "^17.2.0",
     "expo": "~53.0.17",
+    "expo-constants": "^17.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
